Add UI runner and strengthen synthesis

--- a/web-runner/tests/fixtures/selector.html
+++ b/web-runner/tests/fixtures/selector.html
@@ -1,6 +1,13 @@
 <!doctype html>
 <html>
   <body>
-    <button id="submit-btn">Submit</button>
+    <section id="primary-actions">
+      <button id="submit-btn">Submit</button>
+      <button class="generic-button">Save</button>
+      <button class="generic-button">Cancel</button>
+    </section>
+    <section id="secondary-actions">
+      <button class="generic-button">Help</button>
+    </section>
   </body>
 </html>
